--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/jest": "^29.2.6",
     "@types/node": "^14.11.2",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "commitizen": "^4.3.0",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
+    "cz-conventional-changelog": "^3.3.0",
     "dotenv": "^16.0.3",
     "eslint": "^8.32.0",
     "eslint-config-google": "^0.14.0",
@@ -40,5 +42,10 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "~4.7.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
